Add JUnit tests and automate project builds using Gradle